--- a/schedumator_app/test/fixtures/rooms.yml
+++ b/schedumator_app/test/fixtures/rooms.yml
@@ -1,14 +1,10 @@
 # == Schema Information
 #
-# Table name: courses
+# Table name: rooms
 #
-#  id            :integer         not null, primary key
-#  department_id :integer
-#  semester_id   :integer
-#  code          :string(255)
-#  title         :string(255)
-#  created_at    :datetime
-#  updated_at    :datetime
+#  id         :integer         not null, primary key
+#  created_at :datetime
+#  updated_at :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
