--- a/schedumator_app/test/fixtures/meetings.yml
+++ b/schedumator_app/test/fixtures/meetings.yml
@@ -1,14 +1,15 @@
 # == Schema Information
 #
-# Table name: courses
+# Table name: meetings
 #
-#  id            :integer         not null, primary key
-#  department_id :integer
-#  semester_id   :integer
-#  code          :string(255)
-#  title         :string(255)
-#  created_at    :datetime
-#  updated_at    :datetime
+#  id         :integer         not null, primary key
+#  startTime  :integer
+#  endTime    :integer
+#  activity   :string(255)
+#  room_id    :string(255)
+#  section_id :integer
+#  created_at :datetime
+#  updated_at :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
